made a change to title

--- a/mod1.html
+++ b/mod1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Web Sprint 1 Challenge</title>
+  <title>Sprint 2 Module 1</title>
   <style>
     .widget {
       padding: 0 0 0.5rem 0.65rem;
