--- a/mod1.html
+++ b/mod1.html
@@ -7,7 +7,7 @@
     .widget {
       padding: 0 0 0.5rem 0.65rem;
       margin-bottom: 0.5rem;
-      border: 1px solid black;
+      border: 1px solid red;
       border-radius: 0.5rem;
     }
 
